--- a/Site/admin/css/style.css
+++ b/Site/admin/css/style.css
@@ -155,7 +155,7 @@ form input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	
 form input[type="checkbox"], form input[type="radio"] { margin-right: 0.833em; /* 10/12 */ }
 
-form input[type="submit"] {
+form input[type="submit"], form input[type="file"]{
 	border: none;
 	cursor: pointer;
 	padding: 0.833em; /* 10/12 */
@@ -338,66 +338,6 @@ ul#tabs li a.active-tab, ul#tabs li a.active-tab:hover {
 	color: #2a2e36;
 }
 
-
-
-
-
-/* ---------- TABLES ---------- */
-table { width: 100%; margin-bottom: 1.25em; /* 20/16 */ }
-
-table th {
-	background-color: #5d6677;
-	color: white;
-	text-transform: uppercase;
-	padding: 1.25em 0 1.25em 1.25em; /* 15/12 */
-	border-left: 1px solid #747c8a;
-	text-align:center;
-}
-#status{
-	text-align:center;
-}		
-table tbody td {
-	padding: 0.833em 0 0.833em 1.25em; /* 10/12 15/12 */
-	border-left: 1px solid white;
-	border-bottom: 1px solid #f8f9fa;
-}
-	
-/* Alternate table row */
-table tbody tr:nth-child(odd) { background-color: #fff; }
-
-/* Push the first cell to the right so it doesn't stick to the table border */
-table td:first-child, table th:first-child {
-	width: 4em /* 48/12 */;
-	text-align: center;
-	padding: 0;
-	border: none;
-	border-bottom: 1px solid #f8f9fa;
-}
-	
-table td:last-child, table th:last-child {
-	width: 15em; /* 84/12 */
-	text-align: center;
-	padding: 0;
-}
-	
-table td.table-footer {
-	text-align: left;
-	vertical-align: middle;
-	padding-top: 1.25em /* 15/12 */;
-	border: none;
-}
-	
-a.table-actions-button {
-	width: 1.25em;
-	height: 1.25em;
-	display: inline-block;
-	margin-right:35px;
-}
-
-
-
-
-
 /* ---------- LISTS ---------- */
 ol li, .regular-ul li { margin-left: 1.25em; /* 20/16 */ }
 
@@ -554,7 +494,7 @@ h6 #headline{
 	font-size:0.75em;
 	
 }
-form#form-edit input{
+form#form-edit input[type="text"]{
 	width:545px;	
 }
 form#form-advertisement input{
