--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -645,3 +645,10 @@ input[type="submit"]{
 	margin-top: 10px;
 }
 
+/*For index.php*/
+.margin-left-5{
+	margin-left:5px;
+}
+.margin-right-5{
+	margin-right:5px;
+}
