--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -71,7 +71,8 @@ p{
 }
 
 /* ---------- LINK ---------- */
-	a, a:visited {color:white;text-decoration: none; outline: 0; }
+	/*a, a:visited {color:white;text-decoration: none; outline: 0; }*/
+	a, a:visited {text-decoration: none; outline: 0; }
 	p a, p a:visited { line-height: inherit; }
 input[type="text"],input[type="password"]{
 	border:none;
