--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -546,56 +546,76 @@ input[type="submit"]{
 #condition{
 	padding-bottom:90px;
 }
-/*#banner-1{
+
+#banner-right
+{
+    width : 155px;
+    height : 0.1px;
+	background : red;
+	margin-left:auto;
+}
+
+#banner-left
+{
+    width : 150px;
+    height : 0.1px;
+	background : red;
+	margin-right:auto;
+}
+
+
+#banner-1{
 	position:absolute;
 	top:12.5em;
-	left:0.8em;
+	/*left:0.8em;*/
 }
 #banner-3{
 	position:absolute;
 	top:22.5em;
-	left:0.8em;
+	/*left:0.8em;*/
 }
 #banner-5{
 	position:absolute;
 	top:32.5em;
-	left:0.8em;
+	/*left:0.8em;*/
 }
 #banner-7{
 	position:absolute;
 	top:42.5em;
-	left:0.8em;
+	/*left:0.8em;*/
 }
 #banner-9{
 	position:absolute;
 	top:52.5em;
-	left:0.8em;
+	/*left:0.8em;*/
 }
 #banner-2{
 	position:absolute;
 	top:12.5em;
-	left:74.3em;
+	margin-left:auto;
+	/*left:74.3em;*/
 }
 #banner-4{
 	position:absolute;
 	top:22.5em;
-	left:74.3em;
+	/*left:74.3em;*/
 }
 #banner-6{
 	position:absolute;
 	top:32.5em;
-	left:74.3em;
+	/*left:74.3em;*/
 }
 #banner-8{
 	position:absolute;
 	top:42.5em;
-	left:74.3em;
+	/*left:74.3em;*/
 }
 #banner-10{
 	position:absolute;
 	top:52.5em;
-	left:74.3em;
-}*/
+	/*left:74.3em;*/
+}
+
 #error{
 	margin-left:10px;
 }
