--- a/Site/css/960.css
+++ b/Site/css/960.css
@@ -111,7 +111,8 @@ body {
 }
 
 .container_12 .grid_2 {
-  width: 140px;
+  /*width: 140px;*/
+ 	width: 170px;
 }
 .container_12 .grid_4 {
   width: 300px;
